@@ -2,6 +2,7 @@
 ======
 - General:
   - Preferred Applications: Improved layout spacing and alignment
+  - Resolved g_type_class_add_private deprecations (GObject 2.58)
 - Bug Fixes:
   - Hide exo launchers from GNOME Software (Xfce #14588)
   - Fix crash with "preedit-changed" signal (Xfce #14756)
